// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`voiceRange renders 0 1`] = `
Array [
  .c0 {
  voice-range: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceRange renders function 1`] = `
Array [
  .c0 {
  voice-range: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: has;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: has;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceRange renders invalid theme path 1`] = `
Array [
  .c0 {
  voice-range: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceRange renders negative number 1`] = `
Array [
  .c0 {
  voice-range: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceRange renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    voice-range: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-range: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-range: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-range: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    voice-range: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-range: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-range: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-range: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-range: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-range: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-range: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-range: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-range: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-range: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-range: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-range: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceRange renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    voice-range: July;
  }
}

@media April {
  .c0 {
    voice-range: August;
  }
}

@media January {
  .c0 {
    voice-range: September;
  }
}

@media April {
  .c0 {
    voice-range: November;
  }
}

@media June {
  .c0 {
    voice-range: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    voice-range: July;
  }
}

@media April {
  .c0 {
    voice-range: August;
  }
}

@media January {
  .c0 {
    voice-range: September;
  }
}

@media April {
  .c0 {
    voice-range: November;
  }
}

@media June {
  .c0 {
    voice-range: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-range: January;
  }
}

@media April {
  .c0 {
    voice-range: December;
  }
}

@media January {
  .c0 {
    voice-range: April;
  }
}

@media April {
  .c0 {
    voice-range: May;
  }
}

@media June {
  .c0 {
    voice-range: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-range: January;
  }
}

@media April {
  .c0 {
    voice-range: December;
  }
}

@media January {
  .c0 {
    voice-range: April;
  }
}

@media April {
  .c0 {
    voice-range: May;
  }
}

@media June {
  .c0 {
    voice-range: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceRange renders postitive number 1`] = `
Array [
  .c0 {
  voice-range: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceRange renders string 1`] = `
Array [
  .c0 {
  voice-range: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: June;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: June;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceRange renders valid theme path 1`] = `
Array [
  .c0 {
  voice-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-range: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
